--- a/index.html
+++ b/index.html
@@ -2,11 +2,21 @@
 <html>
 <head>
 	<title>CSS BOSSfont</title>
-	<link rel="stylesheet"type="text/css"href ="css/css-sans-1.0.0.css" />
+	<link rel="stylesheet" type="text/css" href="css/css-sans-1.0.0.css" />
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	
-<div class="A"></div>	
+<div class="letter H"></div>
+<div class="letter A"></div>
+<div class="letter N"></div>
+<div class="letter D"></div>
+<div class="letter G"></div>
+<div class="letter L"></div>
+<div class="letter O"></div>
+<div class="letter V"></div>
+<div class="letter E"></div>
+<div class="letter S"></div>	
 
 </body>
 </html>
